--- a/opinionPage.html
+++ b/opinionPage.html
@@ -21,7 +21,7 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li id="info-writing-section"><a href="informativePage.html">Informative Writing</a></li>
                     <li id="opinion-writing-section"><a href="opinionPage.html">Opinion Writing</a></li>
-                    <li id="narrative-writing-section"><a href=narrativePage.html">Narrative Writing</a></li>
+                    <li id="narrative-writing-section"><a href="narrativePage.html">Narrative Writing</a></li>
                 </ul>
             </div>
         </nav>
