--- a/narrativePage.html
+++ b/narrativePage.html
@@ -19,9 +19,9 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="brand-logo">Writing Prompt Randomizer</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li id="info-writing-section"><a href="sass.html">Informative Writing</a></li>
-                    <li id="opinion-writing-section"><a href="badges.html">Opinion Writing</a></li>
-                    <li id="narrative-writing-section"><a href="collapsible.html">Narrative Writing</a></li>
+                    <li id="info-writing-section"><a href="informativePage.html">Informative Writing</a></li>
+                    <li id="opinion-writing-section"><a href="opinionPage.html">Opinion Writing</a></li>
+                    <li id="narrative-writing-section"><a href="narrativePage.html">Narrative Writing</a></li>
                 </ul>
             </div>
         </nav>
