text-structure-modals-display-info

--- a/informativePage.html
+++ b/informativePage.html
@@ -45,8 +45,9 @@
             <h1 id="text-structure-heading">Writing with Text Structure</h1>
             <div>
                 <p id="text-structure-define">
-                    When writing an informative essay, it is important to remember text structure. There are five
-                    different text structures when writing an informative essay:
+                    When writing an informative essay, it is important to remember text structure. Text structure is how
+                    an author organizes the text. There are five different text structures when writing an informative
+                    essay:
                 </p>
                 <h2 class="text-structure-list">
                     <ul class="list-categories">
@@ -59,18 +60,31 @@
                         <!-- Modal Structure -->
                         <div id="modal2" class="modal">
                             <div class="modal-content">
-                                <h4>Description Text Structure</h4>
-                                <p class="text-structure-modal-display" id='description-text-display'>Lorem ipsum dolor
-                                    sit, amet consectetur adipisicing elit.
-                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
-                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
-                                    repudiandae.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
-                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
-                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
-                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
-                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
+                                <h1 id="text-structure-modal-title">Description Text Structure</h1>
+                                <p class="text-structure-modal-display" id='description-text-display'>
+                                    <div>
+                                        <h2>Purpose:</h2>
+                                        <p class="modal-subtopics">To describe a person, place, thing, or idea.</p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Signal Words:
+                                        </h2>
+                                        <p class="modal-subtopics">for example, including, is, is like, can be described
+                                            as, following, another, labeled as, known as, defined as
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Organize:
+                                        </h2>
+                                        <p class="modal-subtopics">An author chooses a main idea to convey to the reader
+                                            about a given topic. A good description text structure includes like
+                                            information grouped together in sections. Each section,depending on the
+                                            length, should have a sub-heading that addresses a more
+                                            specific topic that relates to the main idea of the text.
+                                        </p>
+                                    </div>
                                 </p>
                             </div>
                             <div class="modal-footer">
@@ -87,19 +101,32 @@
                         <!-- Modal Structure -->
                         <div id="modal3" class="modal">
                             <div class="modal-content">
-                                <h4>Compare and Contrast Text Structure</h4>
-                                <p class="text-structure-modal-display" id='compare-text-display'>Lorem ipsum dolor sit,
-                                    amet consectetur adipisicing elit.
-                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
-                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
-                                    repudiandae.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
-                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
-                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
-                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
-                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
-
+                                <h1 id="text-structure-modal-title">Compare and Contrast Text Structure</h1>
+                                <p class="text-structure-modal-display" id='description-text-display'>
+                                    <div>
+                                        <h2>Purpose:</h2>
+                                        <p class="modal-subtopics">To write about similarities and differences
+                                            between two topics, people, places, things, or ideas.
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Signal Words:
+                                        </h2>
+                                        <p class="modal-subtopics">similar, alike, compared to, both, similarity,
+                                            correlates,resembles, relates to, difference, contrasting, unlike, differs
+                                            from, opposite, however, while, not related to
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Organize:
+                                        </h2>
+                                        <p class="modal-subtopics">An author might choose to organize the information
+                                            either by the two topics or by grouping the similarities and the differencs
+                                            in to two sections.
+                                        </p>
+                                    </div>
                                 </p>
 
                             </div>
@@ -116,20 +143,35 @@
                         <!-- Modal Structure -->
                         <div id="modal4" class="modal">
                             <div class="modal-content">
-                                <h4>Sequence Text Structure</h4>
-                                <p class="text-structure-modal-display" id='sequence-text-display'>Lorem ipsum dolor
-                                    sit,
-                                    amet consectetur adipisicing elit.
-                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
-                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
-                                    repudiandae.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
-                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
-                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
-                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
-                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
+                                <h1 id="text-structure-modal-title">Sequence</h1>
+                                <p class="text-structure-modal-display" id='description-text-display'>
+                                    <div>
+                                        <h2>Purpose:</h2>
+                                        <p class="modal-subtopics">To write about a person, place, thing, events, or
+                                            ideas in time order or in an order that needs to be followed.
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Signal Words:
+                                        </h2>
+                                        <p class="modal-subtopics">first, second, third, beginning, after, next, later,
+                                            lastly, another, dates references, time references, on, following, then,
+                                            when, before
 
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Organize:
+                                        </h2>
+                                        <p class="modal-subtopics">An author would use sequence text structure to
+                                            describe how a particular event took place, how make something in steps,
+                                            or to write about someone's life. Writing in sequence text structure
+                                            requires information to be grouped in the order it happened or needs to be
+                                            done.
+                                        </p>
+                                    </div>
                                 </p>
 
                             </div>
