finished-informative-writing-modals

--- a/informativePage.html
+++ b/informativePage.html
@@ -60,8 +60,8 @@
                         <!-- Modal Structure -->
                         <div id="modal2" class="modal">
                             <div class="modal-content">
-                                <h1 id="text-structure-modal-title">Description Text Structure</h1>
-                                <p class="text-structure-modal-display" id='description-text-display'>
+                                <h1 class="text-structure-modal-title">Description Text Structure</h1>
+                                <div class="text-structure-modal-display" id='description-text-display'>
                                     <div>
                                         <h2>Purpose:</h2>
                                         <p class="modal-subtopics">To describe a person, place, thing, or idea.</p>
@@ -85,7 +85,7 @@
                                             specific topic that relates to the main idea of the text.
                                         </p>
                                     </div>
-                                </p>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
@@ -101,8 +101,8 @@
                         <!-- Modal Structure -->
                         <div id="modal3" class="modal">
                             <div class="modal-content">
-                                <h1 id="text-structure-modal-title">Compare and Contrast Text Structure</h1>
-                                <p class="text-structure-modal-display" id='description-text-display'>
+                                <h1 class="text-structure-modal-title">Compare and Contrast Text Structure</h1>
+                                <div class="text-structure-modal-display" id='description-text-display'>
                                     <div>
                                         <h2>Purpose:</h2>
                                         <p class="modal-subtopics">To write about similarities and differences
@@ -127,7 +127,7 @@
                                             in to two sections.
                                         </p>
                                     </div>
-                                </p>
+                                </div>
 
                             </div>
                             <div class="modal-footer">
@@ -143,8 +143,8 @@
                         <!-- Modal Structure -->
                         <div id="modal4" class="modal">
                             <div class="modal-content">
-                                <h1 id="text-structure-modal-title">Sequence</h1>
-                                <p class="text-structure-modal-display" id='description-text-display'>
+                                <h1 class="text-structure-modal-title">Sequence</h1>
+                                <div class="text-structure-modal-display" id='description-text-display'>
                                     <div>
                                         <h2>Purpose:</h2>
                                         <p class="modal-subtopics">To write about a person, place, thing, events, or
@@ -172,7 +172,7 @@
                                             done.
                                         </p>
                                     </div>
-                                </p>
+                                </div>
 
                             </div>
                             <div class="modal-footer">
@@ -188,21 +188,34 @@
                         <!-- Modal Structure -->
                         <div id="modal5" class="modal">
                             <div class="modal-content">
-                                <h4>Cause and Effect Text Structure</h4>
-                                <p class="text-structure-modal-display" id='cause-text-display'>Lorem ipsum dolor
-                                    sit,
-                                    amet consectetur adipisicing elit.
-                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
-                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
-                                    repudiandae.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
-                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
-                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
-                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
-                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
+                                <h1 class="text-structure-modal-title">Cause and Effect Text Structure</h1>
+                                <div class="text-structure-modal-display" id='cause-text-display'>
+                                    <div>
+                                    <h2>Purpose:</h2>
+                                        <p class="modal-subtopics">An author writes about an event or several events that lead to another event or a series of events.
+                                            The author shows the connection between an action and the result or results of the action(s)
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Signal Words:
+                                        </h2>
+                                        <p class="modal-subtopics">cause, effect, result, as a result, caused by, because, so, consequently, therefore,
+                                            since, thus, leads to, as a consequence of, due to, so that
 
-                                </p>
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Organize:
+                                        </h2>
+                                        <p class="modal-subtopics">An author would use cause and effect to show how events are related. When one event leads to another or
+                                            when one event causes another event to happen. An author should organize the text by connecting events together or in sections. An 
+                                            author may also choose to group the events in a section and follow it up with another section of the consequences or
+                                            the results that happen or could happen.
+                                        </p>
+                                    </div>
+                                </div>
 
                             </div>
                             <div class="modal-footer">
@@ -218,20 +231,33 @@
                         <!-- Modal Structure -->
                         <div id="modal6" class="modal">
                             <div class="modal-content">
-                                <h4>Problem and Solution Text Structure</h4>
-                                <p class="text-structure-modal-display" id='problem-text-display'>Lorem ipsum dolor
-                                    sit,
-                                    amet consectetur adipisicing elit.
-                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
-                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
-                                    repudiandae.
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
-                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
-                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
-                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
-                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
-                                </p>
+                                <h1 class="text-structure-modal-title">Problem and Solution Text Structure</h4>
+                                <div class="text-structure-modal-display" id='problem-text-display'> <div>
+                                    <h2>Purpose:</h2>
+                                        <p class="modal-subtopics">An author writes about an event or several events that lead to another event or a series of events.
+                                            The author shows the connection between an action and the result or results of the action(s)
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Signal Words:
+                                        </h2>
+                                        <p class="modal-subtopics">cause, effect, result, as a result, caused by, because, so, consequently, therefore,
+                                            since, thus, leads to, as a consequence of, due to, so that
+
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <h2>
+                                            Organize:
+                                        </h2>
+                                        <p class="modal-subtopics">An author would use cause and effect to show how events are related. When one event leads to another or
+                                            when one event causes another event to happen. An author should organize the text by connecting events together or in sections. An 
+                                            author may also choose to group the events in a section and follow it up with another section of the consequences or
+                                            the results that happen or could happen.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
