--- a/informativePage.html
+++ b/informativePage.html
@@ -234,16 +234,16 @@
                                 <h1 class="text-structure-modal-title">Problem and Solution Text Structure</h4>
                                 <div class="text-structure-modal-display" id='problem-text-display'> <div>
                                     <h2>Purpose:</h2>
-                                        <p class="modal-subtopics">An author writes about an event or several events that lead to another event or a series of events.
-                                            The author shows the connection between an action and the result or results of the action(s)
+                                        <p class="modal-subtopics">An author presents the reader with a problem and then lists a solution or possible solutions to the problem.
+                                            A reader should be able to identify what the problem is and then describe the various solutions an author presents.
                                         </p>
                                     </div>
                                     <div>
                                         <h2>
                                             Signal Words:
                                         </h2>
-                                        <p class="modal-subtopics">cause, effect, result, as a result, caused by, because, so, consequently, therefore,
-                                            since, thus, leads to, as a consequence of, due to, so that
+                                        <p class="modal-subtopics">problem, solution, issue, answer, possibility, resolution(s), if...then, because, this led to,
+                                            cause, could be, accordingly
 
                                         </p>
                                     </div>
@@ -251,10 +251,11 @@
                                         <h2>
                                             Organize:
                                         </h2>
-                                        <p class="modal-subtopics">An author would use cause and effect to show how events are related. When one event leads to another or
-                                            when one event causes another event to happen. An author should organize the text by connecting events together or in sections. An 
-                                            author may also choose to group the events in a section and follow it up with another section of the consequences or
-                                            the results that happen or could happen.
+                                        <p class="modal-subtopics">An author will first present a problem(s) that needs to be addressed. The author should write about
+                                            why the problem needs to be addressed. After the problem is presented, an author should write about a solution or possible solutions
+                                            to the problem that was presented. An author may organize the information by presenting the problem and then follow it with
+                                            solutions. Separate sections for the problem and solution may be helpful, but at the least, the problem should be presented first followed by
+                                            possible solutions. 
                                         </p>
                                     </div>
                                 </div>
@@ -279,9 +280,9 @@
                         <div class="col l4 offset-l2 s12">
                             <h5 class="white-text">Links</h5>
                             <ul>
-                                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Informative Writing</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Opinion Writing</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Narrative Writing</a></li>
                                 <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
                             </ul>
                         </div>
@@ -289,7 +290,7 @@
                 </div>
                 <div class="footer-copyright" id="footer-bottom">
                     <div class="container">
-                        © 2020 Copyright Text
+                        © 2020 Writing Prompt Randomizer
                         <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
                     </div>
                 </div>
