opinion writing description modals and information

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="section white">
             <div class="row container" id='parallax-white-section'>
-                <h2 class="header" id="parallax-title">Learn the right way to write</h2>
+                <h2 class="header" id="parallax-title">The right way to write</h2>
                 <i class="fas fa-chevron-circle-down" id='scroll-down'></i>
             </div>
         </div>
