--- a/informativePage.html
+++ b/informativePage.html
@@ -45,9 +45,11 @@
             <h1 id="text-structure-heading">Writing with Text Structure</h1>
             <div>
                 <p id="text-structure-define">
-                    When writing an informative essay, it is important to remember text structure. Text structure is how
-                    an author organizes the text. There are five different text structures when writing an informative
-                    essay:
+                    When writing an informative essay, it is important to remember your purpose in writing an informative paper and text structure.
+                    An author should have a specific purpose for writing an informative paper. You not only want to inform a reader about a particular topic, but
+                    how you organize your paper depends on your purpose. <br><br>Text structure is how an author organizes the text. Once an author determines their purpose, they will 
+                    choose the text structure they will need to effectively communicate and organize their paper. There are five different text structures an author uses 
+                    when writing an informative essay:
                 </p>
                 <h2 class="text-structure-list">
                     <ul class="list-categories">
